set(PRIV_INCLUDE_DIRS_LIST
    "${CMAKE_CURRENT_LIST_DIR}/include"
)
set(SRC_DIRS_LIST
    "${CMAKE_CURRENT_LIST_DIR}"
    "${CMAKE_CURRENT_LIST_DIR}/src"
)
set(EXCLUDE_SRCS_LIST "")
set(PRIV_REQUIRES_LIST "")

idf_component_register(
    PRIV_INCLUDE_DIRS   ${PRIV_INCLUDE_DIRS_LIST}
    SRC_DIRS            ${SRC_DIRS_LIST}
    EXCLUDE_SRCS        ${EXCLUDE_SRCS_LIST}
    PRIV_REQUIRES       ${PRIV_REQUIRES_LIST}
)
